...
    <string name="current_country_fragment_covid_data_fetch_success">Covid19 data fetched</string>
    <string name="current_country_fragment_name_fetch_error">Cannot fetch country name</string>
    <string name="current_country_fragment_name_fetch_success">Country name fetched</string>
    <string name="current_country_fragment_exception_appeared">Exception appeared</string>

    <!-- Dialog titles and messages -->
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_cannot_add_country">Cannot add this country</string>
    <string name="dialog_message_cannot_get_country_name">Cannot define country name</string>
    <string name="dialog_message_cannot_fetch_data">Cannot fetch data</string>
    <string name="dialog_message_cannot_delete_country">Cannot delete country</string>
    <string name="dialog_message_exception_message">Unknown exception appeared</string>
    <string name="dialog_ok_button_text">OK</string>

...
