<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_current_location"
        android:icon="@drawable/ic_my_location"
        android:title="Current" />

    <item
        android:id="@+id/nav_saved_countries"
        android:icon="@drawable/ic_coutry_location"
        android:title="List" />

    <item
        android:id="@+id/addCountryFragment"
        android:icon="@drawable/ic_add"
        android:title="Add" />
</menu>